updated with new conferences, writing and releases

--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -96,6 +96,7 @@
         <section id="IntonarumoriSoloReleases" class="release-box-list">
             <h3>Solo Releases</h3>
             <ul>
+                <li><a href="https://www.unitcircle.com/rekkids/releases/tUC092/"><img src="https://unitcircle.com/rekkids/img/tUC092-large@2X.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC092/"><span class="release-album">1999|2021</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only LP</span>, <span class="release-year">2022</span></div></li>
                 <li><a href="http://unitcircle.com/rekkids/releases/tUC090/"><img src="https://unitcircle.com/images/UCReleases/tUC090-big.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC090/"><span class="release-album">L-ST</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only EP</span>, <span class="release-year">2013</span></div></li>
                 <li><a href="http://www.singularsphere.com/releases/ss1.html"><img src="https://unitcircle.com/images/UCReleases/tUC089-big.jpg" /></a><div><a href="http://www.singularsphere.com/releases/ss1.html"><span class="release-album">GTR Remix</span></a>, <span class="release-recordlabel">Singular Sphere Records</span>, <span class="release-media">CD</span>, <span class="release-year">2004</span></div></li>
                 <li><a href="http://unitcircle.com/rekkids/releases/tUC075/"><img src="https://unitcircle.com/images/UCReleases/tUC075-big.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC075/"><span class="release-album">Material</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">CD</span>, <span class="release-year">2002</span></div></li>
@@ -125,7 +126,8 @@
             <ul>
                 <li><img src="https://www.intonarumori.com/images/cursedreamcover300x300.jpg" /><div><span class="release-song">A Curse Uttered, A Dream Forgotten</span>, <span class="release-recordlabel">Singular Sphere Records</span>, <span class="release-media">MP3 single</span>, <span class="release-year">2008</span></div></li>
                 <li><img src="https://www.intonarumori.com/images/fridhemsplancover300x300.jpg" /><div><span class="release-song">Fridhemsplan</span>, <span class="release-recordlabel">self-released<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2013</span></div></li>
-                <li><img width=300 height=300 src="https://www.kevingoldsmith.com/img/Intonarumori_WeAuralOrbs.jpg" /><div><span class="release-song">We Aural Orbs</span>, <span class="release-recordlabel">Silber<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2019</span></div></lu>
+                <li><img width=300 height=300 src="https://www.kevingoldsmith.com/img/Intonarumori_WeAuralOrbs.jpg" /><div><span class="release-song">We Aural Orbs</span>, <span class="release-recordlabel">Silber<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2019</span></div></li>
+                <li><img width=300 height=300 src="https://www.kevingoldsmith.com/img/On_Hosier_Lane_I_dreamt_of_masonry.jpg" /><div><span class="release-song">On Hosier Lane, I Dreamt of Masonry</span>, <span class="release-recordlabel">Silber<span>, <span class="release-media">MP3 single</span>, <span class="release-year">2021</span></div></li>
             </ul>
         </section>
         <div id="soundcloud" class="ut">
