--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -89,6 +89,7 @@
         <section id="A2ASoloReleases" class="release-box-list">
             <h3>Solo Releases</h3>
             <ul>
+                <li><a href="http://unitcircle.com/rekkids/releases/tUC093/"><img src="https://unitcircle.com/rekkids/img/tUC093-large.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC093/"><span class="release-album">Molochna</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only Single</span>, <span class="release-year">2022</span></div></li>
                 <li><a href="http://unitcircle.com/rekkids/releases/tUC091/"><img src="https://unitcircle.com/rekkids/img/tUC091-large.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC091/"><span class="release-album">Lilium EP</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only EP</span>, <span class="release-year">2015</span></div></li>
             </ul>
         </section>
