--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -145,6 +145,9 @@
                 <li><span class="release-band">transPacific</span> - <span class="release-album">2004 Demo</span> - <span class="release-recordlabel">self-released</span>, <span class="release-media">CDR</span>, <span class="release-year">2004</span> </li>
             </ul>
         </section>
+        <div id="soundcloud" class="ut">
+            <iframe width="90%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/226881592&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/callisonhenson" title="Robert Henson" target="_blank" style="color: #cccccc; text-decoration: none;">Robert Henson</a> · <a href="https://soundcloud.com/callisonhenson/sets/transpacific" title="Transpacific" target="_blank" style="color: #cccccc; text-decoration: none;">Transpacific</a></div>
+        </div>
         <section>
             <h3>Compilations</h3>
             <ul>
