updated favicon fixed leadingeng in conferences and added page for leadingeng links

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -21,6 +21,8 @@
 	<title>Resume: Kevin Goldsmith</title>
 	<link rel="canonical" href="https://kevingoldsmith.com/resume.html" />
 
+	{% include 'favicon.html' %}
+
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
 	<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
