--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -52,6 +52,8 @@
     <meta name="twitter:domain" content="kevingoldsmith.com"/>
     <meta name="twitter:url" content="https://kevingoldsmith.com/">
 
+	{% include 'favicon.html' %}
+
     <!-- Styling -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
