--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -21,6 +21,8 @@
     <meta name="google-site-verification" content="{{googsiteverification}}" />
 	<link rel="canonical" href="https://kevingoldsmith.com/talks/" />
 
+	{% include 'favicon.html' %}
+
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
 	<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
