--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -20,7 +20,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="{{googsiteverification}}" />
     <link rel="canonical" href="https://kevingoldsmith.com/talks/{{filename}}" />
-    
+   
+	{% include 'favicon.html' %}
+
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
 	<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
