--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -26,6 +26,8 @@
     <link rel="dns-prefetch" href="https://google-analytics.com" />
 
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+    {% include 'favicon.html' %}
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="css/main.css" />
