--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -25,6 +25,8 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     <link rel="dns-prefetch" href="https://google-analytics.com" />
 
+    {% include 'favicon.html' %}
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="css/main.css" />
