updated bigdata conference and added Those Who Attack Space

--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -95,6 +95,13 @@
                 <li><a href="http://unitcircle.com/rekkids/releases/tUC091/"><img src="https://unitcircle.com/rekkids/img/tUC091-large.jpg" /></a><div><a href="http://unitcircle.com/rekkids/releases/tUC091/"><span class="release-album">Lilium EP</span></a>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only EP</span>, <span class="release-year">2015</span></div></li>
             </ul>
         </section>
+        <h2>Solo Recordings (<a href="https://thosewhoattackspace.com/">Those Who Attack Space</a>)</h2>
+        <section id="TWASSoloReleases" class="release-box-list">
+            <h3>Solo Releases</h3>
+            <ul>
+                <li><a href="https://thosewhoattackspace.com/"><img src="https://thosewhoattackspace.com/those_who_attack_space_theme@2x.png" width="400" height="400" /></a><div><span class="release-album">Those Who Attack Space Theme</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only Single</span>, <span class="release-year">2022</span></div></li>
+            </ul>
+        </section>
         <h2 style="margin-top: 14em">Solo Recordings (<a href="https://intonarumori.com">Intonarumori</a>)</h2>
         <section id="IntonarumoriSoloReleases" class="release-box-list">
             <h3>Solo Releases</h3>
