fixed 7CTOs podcast link added Mastodon button added Orange Outrage Machine

--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -99,6 +99,7 @@
         <section id="TWASSoloReleases" class="release-box-list">
             <h3>Solo Releases</h3>
             <ul>
+                <li><a href="https://thosewhoattackspace.com/"><img src="https://thosewhoattackspace.com/those_who_attack_space_theme@2x.png" width="400" height="400" /></a><div><span class="release-album">Orange Outrage Machine</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only Single</span>, <span class="release-year">2022</span></div></li>
                 <li><a href="https://thosewhoattackspace.com/"><img src="https://thosewhoattackspace.com/those_who_attack_space_theme@2x.png" width="400" height="400" /></a><div><span class="release-album">Those Who Attack Space Theme</span>, <span class="release-recordlabel">Unit Circle Rekkids</span>, <span class="release-media">Digital-only Single</span>, <span class="release-year">2022</span></div></li>
             </ul>
         </section>
