--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -92,7 +92,7 @@
 		}
 		#links {
 			margin-top: 1em;
-			width: 185px;
+			width: 220px;
 		}
 		.genericon {
 			width: 24px;
@@ -174,6 +174,7 @@
 			</ul>
 		</nav>
 		<div id="links">
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://mastodon.social/@kmg"><img class="genericon" src="img/mastodon.svg"></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
