added new Google Analytics code added black, mypy added type hints for everything

--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -82,6 +82,7 @@
         }
     </style>
 </head>
+{% include 'google-analytics.html' %}
 <body>
     {% set active_page = 'musician' %}
     {% include 'header.html' %}
