--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -286,6 +286,7 @@
 
 	</style>
 </head>
+{% include 'google-analytics.html' %}
 <body itemscope itemtype="http://schema.org/Person">
 {% set active_page = 'technology leader' %}
 {% include 'header.html' %}
