--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -163,6 +163,7 @@
 		/* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
 	</style>
 </head>
+{% include 'google-analytics.html' %}
 <body>
 	<div id="header"><h1><span itemprop="name">Kevin Goldsmith</span></h1></div>
 	<div id="menu">
