--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="talkpages.css" />
 </head>
+{% include 'google-analytics.html' %}
 <body>
 	{% include 'talk-header.html' %}
 	<main id="content">
