--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -96,6 +96,7 @@
         }
     </style>
 </head>
+{% include 'google-analytics.html' %}
 <body>
     {% set active_page = 'writer' %}
     {% include 'header.html' %}
