--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -62,6 +62,7 @@
 		}
 	</style>
 </head>
+{% include 'google-analytics.html' %}
 <body>
 	{% set active_page = 'photographer' %}
 	{% include 'header.html' %}
