--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -104,6 +104,7 @@
 	</style>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
 </head>
+{% include 'google-analytics.html' %}
 <body>
 	{% set talk_index=true %}
 	{% include 'talk-header.html' %}
