--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -21,6 +21,14 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="{{rootpath}}css/main.css" />
+    <style>
+        img {
+            width: 100%;
+            max-width: 400px;
+            height: 100%;
+            max-height: 400px;
+        }
+    </style>
 </head>
 {% include 'google-analytics.html' %}
 <body>
@@ -32,6 +40,13 @@
         <ul>
             {% for gallery in subgalleries %}
             <li><a href="{{gallery.relative_path}}{% if debug_mode %}index.html{% endif %}">{{gallery.name}}</a></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% if images %}
+        <ul>
+            {% for image in images %}
+            <li><img src="{{image.output_filename}}" />{{image.name}}</li>
             {% endfor %}
         </ul>
         {% endif %}
