--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -45,7 +45,7 @@
         {% if images %}
         <ul>
             {% for image in images %}
-            <li><img src="{{image.thumb_filename}}" /> <a href="{{image.image_page}}">{{image.name}}</a></li>
+            <li><a href="{{image.image_page}}"><img src="{{image.thumb_filename}}" />  {{image.name}}</a></li>
             {% endfor %}
         </ul>
         {% endif %}
