--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -26,6 +26,33 @@
             max-width: 400px;
             max-height: 400px;
         }
+        .wrapper {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+            grid-auto-rows: minmax(500px, auto);
+            align-items: start;
+            justify-items: center;
+        }
+        @media only screen and (max-width: 40em) {
+            .wrapper {
+                grid-template-columns: repeat(1, 1fr);
+                grid-auto-rows: minmax(auto, auto);
+                gap: 20px;
+            }
+        }
+        @media only screen and (min-width: 40em) and (max-width: 65em) {
+            img {
+                max-width: 300px;
+                max-height: 300px;
+            }
+            .wrapper {
+                grid-template-columns: repeat(2, 1fr);
+                grid-auto-rows: minmax(auto, auto);
+                gap: 20px;
+                margin: 0em 2em 0em 2em;
+            }
+        }
     </style>
 </head>
 {% include 'google-analytics.html' %}
@@ -36,11 +63,11 @@
         <h1>{{galleryname}}</h1>
         {% if gallerydescription %}<div id="gallerydescription">{{gallerydescription}}</div>{% endif %}
         {% if subgalleries %}
-        <ul>
+        <div class="wrapper">
             {% for gallery in subgalleries %}
-            <li><a href="{{gallery.relative_path}}{% if debug_mode %}index.html{% endif %}">{% if gallery.preview_image %}<img src="{{gallery.relative_path}}{{gallery.preview_image.thumb_filename}}" /> {% endif %}{{gallery.name}}</a></li>
+            <div><a href="{{gallery.relative_path}}{% if debug_mode %}index.html{% endif %}">{% if gallery.preview_image %}<img src="{{gallery.relative_path}}{{gallery.preview_image.thumb_filename}}" />{% endif %}<div>{{gallery.name}}</div></a></div>
             {% endfor %}
-        </ul>
+        </div>
         {% endif %}
         {% if images %}
         <ul>
