more styling for resizing

--- a/templates/photo-page-template.html
+++ b/templates/photo-page-template.html
@@ -70,6 +70,11 @@
         #sharing {
             padding: 10px 0px 10px 0px;
         }
+        @media only screen and (max-width: 1000px) {
+            .fullsize {
+                max-width: 500px;
+            }
+        }
     </style>
 </head>
 {% include 'google-analytics.html' %}
