--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="{{rootpath}}css/main.css" />
+    <link rel="stylesheet" href="{{rootpath}}css/gallery.css" />
     <style>
         img {
             max-width: 400px;
@@ -34,6 +35,58 @@
             align-items: start;
             justify-items: center;
         }
+{#
+        @keyframes display {
+            0% {
+                transform: translateX(400px);
+                opacity: 0;
+            }
+            10% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+            20% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+            30% {
+                transform: translateX(-400px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(-400px);
+                opacity: 0;
+            }
+        }
+        .pic-ctn {
+            position: relative;
+            width: 400px;
+            height: 400px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 15vh;
+            z-index: -100;
+        }
+        .pic-ctn > img {
+            position: absolute;
+            top: 0;
+            left: calc(50% - 200px);
+            opacity: 0;
+            animation: display 10s infinite;
+        }
+        img:nth-child(2) {
+            animation-delay: 2s;
+        }
+        img:nth-child(3) {
+            animation-delay: 4s;
+        }
+        img:nth-child(4) {
+            animation-delay: 6s;
+        }
+        img:nth-child(5) {
+            animation-delay: 8s;
+        }
+#}
         @media only screen and (max-width: 40em) {
             .wrapper {
                 grid-template-columns: repeat(1, 1fr);
@@ -61,6 +114,15 @@
 	<main id="content">
         {% if breadcrumbs %}<div id="breadcrumbs">{% for crumb in breadcrumbs %}<a href="{{crumb[1]}}">{{crumb[0]}}</a> / {% endfor %}</div>{% endif %}
         <h1>{{galleryname}}</h1>
+{#
+        {% if subgalleries and not images %}
+        <div class="pic-ctn">
+            {% for gallery in subgalleries[:5] %}
+            <img src="{{gallery.relative_path}}{{gallery.preview_image.thumb_filename}}" class="pic"/>
+            {% endfor %}
+        </div>
+        {% endif %}
+#}
         {% if gallerydescription %}<div id="gallerydescription">{{gallerydescription}}</div>{% endif %}
         {% if subgalleries %}
         {% if images %}<h2>albums</h2>{% endif %}
