protect thumbnail images too

--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -26,6 +26,7 @@
         img {
             max-width: 400px;
             max-height: 400px;
+            pointer-events: none;
         }
         .wrapper {
             display: grid;
