--- a/templates/photo-page-template.html
+++ b/templates/photo-page-template.html
@@ -29,6 +29,7 @@
         .thumbnail {
             max-width: 400px;
             max-height: 400px;
+            pointer-events: none;
         }
         .fullsize {
             max-width: 1000px;
