--- a/templates/photo-page-template.html
+++ b/templates/photo-page-template.html
@@ -41,7 +41,7 @@
         }
         .rcol {
             float: left;
-            width: 200px;
+            width: 300px;
             margin-top: 1em;
         }
         .rcol section {
@@ -127,7 +127,7 @@
                         <table>
                             {% for key, value in metadata.items() %}
                             <tr>
-                                {% if key == "GPSInfo" %}
+                                {% if key == "GPS" %}
                                 <td class="md-title">GPS:</td>
                                 <td><a href="https://www.google.com/maps/search/?api=1&query={{ value['lat'] }}%2C{{ value['lon'] }} target='_blank'">{{ value['lat'] }}, {{ value['lon'] }}</a></td>
                                 {% elif key == "description" or key == "title" %}
