final updates and cleanup

--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -26,7 +26,6 @@
         img {
             max-width: 400px;
             max-height: 400px;
-            pointer-events: none;
         }
         .wrapper {
             display: grid;
@@ -137,7 +136,7 @@
         {% if subgalleries %}<h2>images</h2>{% endif %}
         <div class="wrapper">
             {% for image in images %}
-            <div><a href="{{image.image_page}}"><img src="{{image.thumb_filename}}" /><div>{{image.name}}</a></div></div>
+            <div><a href="{{image.image_page}}"><img src="{{image.thumb_filename}}" /><div>{% if image.iptc.title %}{{image.iptc.title}}{% else %}{{image.name}}{% endif %}</a></div></div>
             {% endfor %}
         </div>
         {% endif %}
