--- a/templates/sitenav.html
+++ b/templates/sitenav.html
@@ -3,7 +3,7 @@
     ('talks/index.html', 'speaker'),
     ('writing.html', 'writer'),
     ('music.html', 'musician'),
-    ('photography.html', 'photographer')
+    ('photos/index.html', 'photographer')
 ] -%}
 {% set active_page = active_page|default('technology leader') -%}
 <div {% if not vertical %}id="site-nav"{% endif %}>
