--- a/templates/talk-header.html
+++ b/templates/talk-header.html
@@ -6,7 +6,7 @@
             <li class="current-page">{% if not talk_index %}<a href="{% if debug_mode %}index.html{% else %}https://kevingoldsmith.com/talks/{% endif %}">{% endif %}speaker{% if not talk_index %}</a>{% endif %}</li>
             <li><a href="{% if debug_mode %}../writing.html{% else %}https://kevingoldsmith.com/writing.html{% endif %}">writer</a></li>
             <li><a href="{% if debug_mode %}../music.html{% else %}https://kevingoldsmith.com/music.html{% endif %}">musician</a></li>
-            <li><a href="{% if debug_mode %}../photography.html{% else %}https://kevingoldsmith.com/photography.html{% endif %}">photographer</a></li>
+            <li><a href="{% if debug_mode %}../photos/index.html{% else %}https://kevingoldsmith.com/photos/index.html{% endif %}">photographer</a></li>
         </ul>
     </div>
 </header>
