--- a/templates/contactpage.html
+++ b/templates/contactpage.html
@@ -5,30 +5,41 @@
     <meta name="robots" content="noarchive" />
     <meta name="robots" content="notranslate" />
     <meta name="robots" content="noimageindex" />
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{{title}}</title>
-    <meta name="description" content="Photo {{metadata.title}} by {{author}}" />
+    <title>Contact {{author}}, {{title}}</title>
+    <meta name="description" content="Contact information for {{author}}, {{title}}" />
     <meta name="author" content="{{author}}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="{{googsiteverification}}" />
     <link rel="canonical" href="https://kevingoldsmith.com/{{filename}}" />
-	{% include 'favicon.html' %}
+    {% include 'favicon.html' %}
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
-	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
-	<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
-	<link rel="dns-prefetch" href="https://google-analytics.com" />
+    <link rel="dns-prefetch" href="https://ajax.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="https://google-analytics.com" />
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
-    <link rel="stylesheet" href="{{rootpath}}css/main.css" />
-    <link rel="stylesheet" href="{{rootpath}}css/genericons.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/genericons.css" />
 </head>
 {% include 'google-analytics.html' %}
 <body>
-    <div style="clear:both"></div>
+    <header>
+        <h1>{{first_name}} {{last_name}}</h1>
+        {{title}}
+        {{organization}}
+    </header>
+    <main>
+        <ul id="contactmethods">
+            {% if email %}<li class="email">{{email}}</li>{% endif %}
+            {% for contact_method in contact_list %}<li>{% if contact_method.type == "LinkedIn" %}<h2>LinkedIn</h2><a href="{{contact_method.url}}">{{contact_method.url}}</a></h2></li>{% endif %}{% endfor %}
+        </ul>
+        <div style="clear:both"></div>
+    </main>
     {% include 'footer.html' %}
-    <script src="{{rootpath}}js/fontfaceobserver.js"></script>
+    <script src="/js/fontfaceobserver.js"></script>
 </body>
 </html>
